// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test for atom - Badge render Badge with specify textProps must render correctly 1`] = `
<div>
  <span
    class="css-1i1ahpj"
  >
    this is a super weird test
  </span>
</div>
`;

exports[`test for atom - Badge render Badge without props must be same 1`] = `
<div>
  <span
    class="css-1i1ahpj"
  />
</div>
`;
